@@ -1,3 +1,8 @@
+DEV
+- Added GNB to tank group (so they'll appear with blue background).
+- Tweaks to encounter detection, simply and use "you obtained tomestones" message to flag clear.
+- Added 'Ended' status for encounters with unknown status (zone change, etc).
+
 1.22
 - Fix bug in stat collector.
 - Log clean up goroutine.
